--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Video x Music Stream Bot",
+    "name": "Video Fire Music Stream Bot",
     "description": "Telegram bot for Streaming Video & Music trought the Telegram Group Video Chat, powered by pytgcalls and pyrogram",
-    "logo": "https://telegra.ph/file/1c41ded2dd871eb36bd7e.png",
+    "logo": "https://telegra.ph/file/f23ca2711643da6f61eb3.jpg",
     "keywords": [
         "pytgcalls",
         "telegram bot",
@@ -9,8 +9,8 @@
         "pyrogram"
     ],
     "website": "https://t.me/levinachannel",
-    "repository": "https://github.com/levina-lab/video-stream",
-    "success_url": "https://t.me/dlwrml",
+    "repository": "https://github.com/islam-200555/islamtst",
+    "success_url": "https://t.me/Q_X_I_T",
     "env": {
         "API_ID": {
             "description": "your API_ID from my.telegram.org",
